...
        android:textSize="32sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/update_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainEntrantTitle"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:background="#8C52FF"
...
